<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_diff_tool">

    <fragment
        android:id="@+id/nav_diff_tool"
        android:name="cn.albresky.mifareclassictoolx.ui.home.HomeFragment"
        android:label="@string/menu_t_diff"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_edit_dumps"
        android:name="cn.albresky.mifareclassictoolx.ui.gallery.GalleryFragment"
        android:label="@string/menu_t_edit_dumps"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_bcc_calcu_tool"
        android:name="cn.albresky.mifareclassictoolx.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_t_bcc_calcu"
        tools:layout="@layout/fragment_slideshow" />
</navigation>